Remove Default Settings
Remove Default margin and padding

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
 
+*{
+  padding: 0;
+  margin: 0;
+}
+
 .app{
   min-height: 100vh;
 
